--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -86,7 +86,7 @@ color: #FFFFFF;
 
 .middle-container {
   background-color: #FFFFFF;
-  margin: 100px 0;
+  margin: 100px 0 auto 0;
 }
 
 .bottom-container {
